# aseprite-mcp

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  mcp-config.example.json  pyproject.toml
.github/workflows/: ci.yml
docs/: TOOLS.md
docs/audits/: AUDIT_ACTION_PLAN.md  BUG_HARDEN_SECURITY_AUDIT.md
scripts/: gen_tool_docs.py  release_gate.py
src/aseprite_mcp/: __init__.py  app.py  config.py  errors.py  luagen.py  runner.py  server.py
src/aseprite_mcp/core/: __init__.py  config.py  limits.py  luagen.py  manifest.py  oplib.py  paths.py  slice_metadata.py
src/aseprite_mcp/core/engines/: __init__.py  godot.py
src/aseprite_mcp/tools/: __init__.py  batch.py  brushes.py  cels.py  common.py  drawing.py  effects.py  export.py  export_presets.py  frames.py  gui.py  health.py  image.py  inspect.py  layers.py  manifest.py  models.py  palette.py  reference.py  slices.py  sprite.py  tags.py  text.py  tilemap.py  transform.py  validation.py  workflow.py
tests/: conftest.py  test_advanced.py  test_batch.py  test_engine_godot.py  test_errors.py  test_expansion.py  test_export_presets.py  test_export_slice_metadata.py  test_golden.py  test_gui.py  test_health.py  test_imports.py  test_limits.py  test_manifest.py  test_models.py  test_oplib.py  test_output_paths.py  test_overwrite.py  test_properties.py  test_regressions.py  test_slice_metadata.py  test_tools.py  test_unit.py  test_validation.py  test_workflows.py
