[project]
name = "aseprite-mcp"
version = "0.3.0"
description = "An extensive Model Context Protocol (MCP) server for driving Aseprite (pixel-art editor) headlessly via Lua scripting and the Aseprite CLI."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Brendan Malloy" }]
keywords = ["aseprite", "mcp", "pixel-art", "sprite", "model-context-protocol", "animation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Graphics :: Editors",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "mcp[cli]>=1.4.0",
    "pillow>=12.2.0",
]

[project.urls]
Homepage = "https://github.com/MalloyTheDev/aseprite-mcp"
Repository = "https://github.com/MalloyTheDev/aseprite-mcp"
Issues = "https://github.com/MalloyTheDev/aseprite-mcp/issues"

[project.scripts]
aseprite-mcp = "aseprite_mcp.server:main"

[dependency-groups]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aseprite_mcp"]
